-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs25
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8019759 | 8 | Jon Masamitsu | P4 | Resolved | Fixed | b97 |
The used size before GC is printed and the capacity size after GC is printed. It should be
used size after GC instead of capacity.
used size after GC instead of capacity.
- backported by
-
JDK-8019759 MetaspaceAux print_metaspace_change() should print "used" after GC not capacity.
-
- Resolved
-