8014546: MetaspaceAux print_metaspace_change() should print "used" after GC not capacity

Reviewed-by: johnc, tschatzl